--- a/easyrpc-client-spring-boot-starter/pom.xml
+++ b/easyrpc-client-spring-boot-starter/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>rpc-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
